package com.aorihuela.poointerfaces.imprenta.modelo;

public interface Imprimible {
    public String imprimir();
}
